# uniffi-zcash-lib

./: .editorconfig  .gitattributes  .gitignore  .mailmap  CONTRIBUTING.md  README.md  STATUS.md  flake.nix
docker/: Dockerfile
lib/: Cargo.toml
lib/.cargo/: config.toml
lib/docs/: index.html
lib/docs/kotlin/: index.html
lib/docs/python/: index.html
lib/docs/ruby/: index.html
lib/docs/swift/: index.html
lib/uniffi-bindgen/: Cargo.toml  uniffi.toml
lib/uniffi-test-support/: Cargo.toml  build.rs
lib/uniffi-test-support/src/: lib.rs  test_support.udl
lib/uniffi-test-support/tests/: test_generated_bindings.rs
lib/uniffi-zcash/: Cargo.toml  build.rs  uniffi.toml
lib/uniffi-zcash-cli/: Cargo.toml  README.md  env_example  load_env.sh
lib/uniffi-zcash-cli/docker/: docker-compose.yml
lib/uniffi-zcash-cli/docker/python-registry/: Dockerfile
lib/uniffi-zcash-cli/docker/ruby-registry/: Dockerfile  config.ru
lib/uniffi-zcash-cli/src/: bindgen.rs  cli.rs  diff.rs  docgen.rs  helper.rs  main.rs  publish.rs  release.rs  setup.rs  sharedlibs.rs
lib/uniffi-zcash-cli/src/cli/: error.rs
lib/uniffi-zcash-cli/src/diff/: colors.rs  git.rs  grep_item.rs  grep_type.rs  utils.rs
lib/uniffi-zcash-cli/src/release/: kotlin.rs  python.rs  ruby.rs  swift.rs
lib/uniffi-zcash-cli/templates/kotlin/: settings.gradle.kts
lib/uniffi-zcash-cli/templates/kotlin/lib/: build.gradle.kts
lib/uniffi-zcash-cli/templates/kotlin_test_app/: settings.gradle.kts
lib/uniffi-zcash-cli/templates/kotlin_test_app/app/: build.gradle.kts
lib/uniffi-zcash-cli/templates/python/: README.md  setup.py
lib/uniffi-zcash-cli/templates/python/zcash/: __init_.py  __init__.py
lib/uniffi-zcash-cli/templates/python_test_app/: app.py
lib/uniffi-zcash-cli/templates/ruby/: README.md  zcash.gemspec
lib/uniffi-zcash-cli/templates/ruby_test_app/: app.rb
lib/uniffi-zcash-cli/templates/swift/: Package.swift
lib/uniffi-zcash-cli/templates/swift_test_app/: Package.swift
lib/uniffi-zcash-cli/templates/swift_test_app/Sources/: main.swift
lib/uniffi-zcash-test/: Cargo.toml
lib/uniffi-zcash-test/src/: bin.rs  lib.rs  test_support.rs
lib/uniffi-zcash-test/src/test_data/: hdwallet.rs  helper.rs  mod.rs  orchard.rs  secp256k1.rs  testnet_orchard_tx.hex  transaction.rs  zcash_client_backend.rs  zcash_primitives.rs
lib/uniffi-zcash-test/src/udl/: test_support.udl
lib/uniffi-zcash/src/: beam.rs  error.rs  lib.rs  native.rs  native_utils.rs  payment.rs  test_support.rs  transparent.rs  unified_address.rs  utils.rs  zcash.udl
lib/uniffi-zcash/src/hdwallet/: key_index.rs  mod.rs
lib/uniffi-zcash/src/hdwallet/extended_key/: extended_priv_key.rs  mod.rs
lib/uniffi-zcash/src/jubjub/: mod.rs
lib/uniffi-zcash/src/native_utils/: exception.rs  target_ndk.rs  trace.rs
lib/uniffi-zcash/src/orchard/: action.rs  address.rs  bundle.rs  circuit.rs  diversifier_index.rs  mod.rs  tree.rs  value.rs
lib/uniffi-zcash/src/orchard/keys/: diversifier.rs  full_viewing_key.rs  incoming_viewing_key.rs  mod.rs  outgoing_viewing_key.rs  scope.rs  spending_key.rs
lib/uniffi-zcash/src/orchard/note/: commitment.rs  mod.rs
lib/uniffi-zcash/src/secp256k1/: mod.rs
lib/uniffi-zcash/src/test_data/: mod.rs  orchard.rs  sapling.rs
lib/uniffi-zcash/src/udl/: error.udl  namespace.udl  payment.udl  payment_param.udl  test_support.udl
lib/uniffi-zcash/src/udl/hdwallet/: key_index.udl
lib/uniffi-zcash/src/udl/jubjub/: fr.udl
lib/uniffi-zcash/src/udl/orchard/: action.udl  address.udl  bundle.udl  circuit.udl  diversifier_index.udl  tree.udl  value.udl
lib/uniffi-zcash/src/udl/secp256k1/: secret_key.udl
lib/uniffi-zcash/src/udl/zcash_client_backend/: common.udl  decrypt.udl  fees.udl  service.udl  wallet.udl  zip321.udl
lib/uniffi-zcash/src/udl/zcash_client_sqlite/: chain.udl  lib.udl  mod.udl  wallet.udl
lib/uniffi-zcash/src/udl/zcash_primitives/: block.udl  common.udl
lib/uniffi-zcash/src/udl/zcash_proofs/: prover.udl
lib/uniffi-zcash/src/zcash_client_backend/: decrypt.rs  encoding.rs  fees.rs  mod.rs  service.rs  wallet.rs  zip321.rs
lib/uniffi-zcash/src/zcash_client_backend/address/: mod.rs  recipient_address.rs  unified_address.rs
lib/uniffi-zcash/src/zcash_client_backend/data_api/: chain.rs  mod.rs  scanning.rs  wallet.rs
lib/uniffi-zcash/src/zcash_client_backend/fees/: fixed.rs  zip317.rs
lib/uniffi-zcash/src/zcash_client_sqlite/: chain.rs  mod.rs  wallet.rs
lib/uniffi-zcash/src/zcash_primitives/: block.rs  mod.rs
lib/uniffi-zcash/src/zcash_proofs/: mod.rs  prover.rs
lib/uniffi-zcash/tests/: test_data.csv  test_generated_bindings.rs
lib/uniffi-zcash/tests/kotlin/: big_test.kts  orchard.kts  sapling.kts  test.kts  test_support.kts  transaction.kts
lib/uniffi-zcash/tests/python/: orchard.py  sapling.py  test.py  transaction.py
lib/uniffi-zcash/tests/ruby/: orchard.rb  sapling.rb  test.rb  transaction.rb
lib/uniffi-zcash/tests/swift/: orchard.swift  sapling.swift  test.swift  transaction.swift
lib/uniffi_backend_keys/: Cargo.toml  build.rs
lib/uniffi_backend_keys/src/: address.rs  backend_keys.udl  beam.rs  lib.rs  sapling.rs  sapling_address.rs  transparent.rs  unified_address.rs  utils.rs
lib/uniffi_backend_keys/tests/kotlin/: test.kts
lib/uniffi_backend_keys/tests/python/: test.py
lib/uniffi_backend_keys/tests/ruby/: test.rb
lib/uniffi_backend_keys/tests/swift/: test.swift
lib/uniffi_demo_module/: Cargo.toml  build.rs
lib/uniffi_demo_module/src/: demo_module.udl  lib.rs
lib/uniffi_demo_module/tests/: test_generated_bindings.rs
lib/uniffi_demo_module/tests/kotlin/: test.kts
lib/uniffi_demo_module/tests/python/: test.py
lib/uniffi_demo_module/tests/ruby/: test.rb
lib/uniffi_demo_module/tests/swift/: test.swift
lib/uniffi_wallet_ops/: Cargo.toml  build.rs
lib/uniffi_wallet_ops/src/: lib.rs  wallet_ops.udl
lib/uniffi_wallet_ops/tests/: test_generated_bindings.rs
lib/uniffi_wallet_ops/tests/kotlin/: test.kts
lib/uniffi_wallet_ops/tests/python/: test.py
lib/uniffi_wallet_ops/tests/ruby/: test.rb
lib/uniffi_wallet_ops/tests/swift/: test.swift
(+209 files in other folders)
