[workspace]
members = ["uniffi-bindgen", "uniffi-zcash", "uniffi-zcash-cli"]

# We are using eiger fork of uniffi-rs, as we are
# making improvements (inline documentation) on the
# library. Whenever such changes goes upstream, we
# will add directly the uniffi-rs libraries from crates.io.
[workspace.dependencies]
uniffi = {git = "https://github.com/eigerco/uniffi-rs", rev = "4cf40b9fba1769ac65ffcb16616e1eff9c12565a"}
zcash_primitives = { version = "=0.13.0-rc.1", features = ["transparent-inputs"] }
zcash_proofs = { version = "=0.13.0-rc.1" }
zcash_client_backend = { version = "=0.10.0-rc.2", features = ["transparent-inputs", "unstable"] }
incrementalmerkletree = { version = "0.5", features = ["legacy-api"] }
hdwallet = "0.4"
group = { version = "0.13.0" }
orchard = { version = "0.6", default-features = false }

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
