[workspace]
members = ["uniffi-bindgen", "uniffi-zcash", "uniffi-zcash-cli"]
resolver = "2"

# We are using eiger fork of uniffi-rs, as we are
# making improvements (inline documentation) on the
# library. Whenever such changes goes upstream, we
# will add directly the uniffi-rs libraries from crates.io.
[workspace.dependencies]
uniffi = "0.25.2"
zcash_primitives = { version = "=0.13.0", features = ["transparent-inputs"] }
zcash_proofs = { version = "=0.13.0" }
zcash_client_backend = { version = "=0.10.0", features = ["transparent-inputs", "unstable"] }
zcash_address = "0.3"
zcash_client_sqlite = { version = "=0.8.1", features = ["transparent-inputs", "unstable"] }
incrementalmerkletree = { version = "0.5", features = ["legacy-api"] }
orchard = { version = "0.6", default-features = false }
hdwallet = "0.4.1"
group = "0.13.0"
hex = "0.4"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
