[package]
name = "uniffi-test-support"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_test_support"

[dependencies]
uniffi = { workspace = true }
serde_json = { version = "1.0" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }