[package]
name = "uniffi-zcash-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-zcash-cli"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["cargo", "env"] }
strum = { version = "0.24", features = ["derive"] }
handlebars = "4.3.7"
serde = "1.0"
serde_json = "1.0"
fs_extra = "1.3.0"
uuid = { version = "1.3.1", features = ["v4"] }
