[package]
name = "uniffi-zcash-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-zcash-cli"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.2.7", features = ["cargo", "env"] }
handlebars = "4.3.7"
serde = "1.0"
serde_json = "1.0"
fs_extra = "1.3.0"
uuid = { version = "1.3.1", features = ["v4"] }
regex = "1"
retry = "2.0.0"
uniffi-zcash-test = { path = "../uniffi-zcash-test" }
zcash_proofs = { workspace = true, features = ["download-params"] }
home = "0.5.5"
sha256 = "1.1.3"
fat-macho = "0.4.6"
anyhow = "1.0.71"
