[package]
name = "uniffi-zcash-test"
version = "0.1.0"
edition = "2021"

[features]
default = ["test-data"]
test-data = []

[dependencies]
# zcash deps
hdwallet = { workspace = true }
orchard = { workspace = true }
zcash_primitives = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_proofs = { workspace = true }
# crypto deps
group = { workspace = true }
incrementalmerkletree = { workspace = true }
serde_json = "1"
hex = "0.4.3"
bip39 = "2.0.0"
