[package]
name = "zcash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_zcash"

[features]
beam = ["rustler"]

[dependencies]
uniffi = { workspace = true }
uniffi-zcash-test = { path = "../uniffi-zcash-test", default-features = false }
thiserror = "1.0.38"
delegate = "0.9.0"
rustler = { version = "0.27.0", optional = true }
hdwallet = "0.3.1"
zcash_address = "0.2.0"
zcash_primitives = { version = "0.10.0", features = ["transparent-inputs"] }
zcash_client_backend = { version = "0.7.0", features = [
    "transparent-inputs",
    "unstable",
] }
zcash_proofs = { workspace = true }
orchard = { version = "0.3.0" }
secp256k1 = { version = "0.21.3" }
jubjub = { version = "0.9.0" }
reddsa = "0.3.0"
rand = "0.8.5"
bs58 = "0.4.0"
group = "0.12.0"

base64 = "0.21.3"
# android stuff
schemer = "0.2"
secrecy = "0.8"
failure = "0.1"
jni = { version = "0.20", default-features = false }
# Conditional access to newer NDK features
dlopen2 = "0.4"
libc = "0.2"

# Logging
log-panics = "2.0.0"
paranoid-android = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
uniffi-zcash-test = { path = "../uniffi-zcash-test" }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
