[package]
name = "zcash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_zcash"

[features]
beam = ["rustler"]

[dependencies]
uniffi = { workspace = true }
uniffi-zcash-test = { path = "../uniffi-zcash-test", default-features = false }
thiserror = "1.0.38"
delegate = "0.9.0"
rustler = { version = "0.27.0", optional = true } # remove probably
rusqlite = { version = "0.29", features = ["bundled", "time", "array"] }

zcash_address = "0.3"
zcash_client_sqlite = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_primitives = { workspace = true }
zcash_proofs = { workspace = true }
orchard = { workspace = true }
hdwallet = { workspace = true }

group = { workspace = true }
incrementalmerkletree = { workspace = true }
secp256k1 = { version = "0.26" }
jubjub = { version = "0.10.0" }
reddsa = "0.5.1"
rand = "0.8.5"
bs58 = "0.5.0"
hex = { workspace = true }
prost = "0.12"

base64 = "0.21.3"
# android stuff
schemer = "0.2"
secrecy = "0.8"
failure = "0.1"
jni = { version = "0.20", default-features = false }
# Conditional access to newer NDK features
dlopen2 = "0.4"
libc = "0.2"


# Dependencies exposed in a public API:
# (Breaking upgrades to these require a breaking upgrade to this crate.)
# - Data Access API
time = "0.3.22"

# Logging
log-panics = "2.0.0"
paranoid-android = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
uniffi-zcash-test = { path = "../uniffi-zcash-test" }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

