[package]
name = "uniffi_demo_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_demo_module"

[dependencies]
uniffi = { workspace = true }
uniffi_macros = { workspace = true }

[build-dependencies]
uniffi_build = { workspace = true }

[dev-dependencies]
uniffi_bindgen = { workspace = true }