[package]
name = "zcash-wallet-operations"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "uniffi_wallet_ops"

[dependencies]

uniffi = { workspace = true }
hdwallet = { version = "0.3.1", optional = true }
zcash_primitives = { version = "0.9.1", features = ["transparent-inputs"] }
zcash_client_backend = { version = "0.6.1", features = ["transparent-inputs", "unstable"] }
zcash_address = { version = "0.2.0" }
orchard = "0.3.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
